# RQE

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
docs/: tutorial.ipynb
src/: __init__.py  ising.py  model.py  models.py  result.py  rqe.py  tutorial.ipynb  vqe.py
src/helpers/: helpers.py  negativity.py  result.py
src/notebooks/: dev_testbed.ipynb
